@@ -8,7 +8,8 @@ import sys
 import unittest
 from test.test_support import (unlink, TESTFN, unload, run_unittest, rmtree,
                                is_jython, check_warnings, EnvironmentVarGuard)
-
+import textwrap
+from test import script_helper
 
 def remove_files(name):
     for f in (name + os.extsep + "py",
@@ -252,6 +253,17 @@ class ImportTests(unittest.TestCase):
             __import__(path)
         self.assertEqual("Import by filename is not supported.",
                          c.exception.args[0])
+
+    def test_import_in_del_does_not_crash(self):
+        # Issue 4236
+        testfn = script_helper.make_script('', TESTFN, textwrap.dedent("""\
+            import sys
+            class C:
+               def __del__(self):
+                  import imp
+            sys.argv.insert(0, C())
+            """))
+        script_helper.assert_python_ok(testfn)
 
 
 class PycRewritingTests(unittest.TestCase):
